data/usersCode/ghdt/question3/error.txt
/home/rutuja/myenv/RC/data/usersCode/ghdt/question3/code3-1.c:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
 retere
 ^~~~~~
